--- a/podcasts.mdwn
+++ b/podcasts.mdwn
@@ -1,6 +1,6 @@
 I may check out. . .
 
-* http://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-033-computer-system-engineering-spring-2009/
+* http://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-033-computer-system-engineering-spring-2009/ (covers linking)
 * <a href="http://itunes.apple.com/us/itunes-u/programming-paradigms/id384233005">Programming Paradigms | 2008 Stanford - iTunes</a> [Stanford Engineering Everywhere: Programming Paradigms](http://see.stanford.edu/see/lecturelist.aspx?coll=2d712634-2bf1-4b55-9a3a-ca9d470755ee) http://www.youtube.com/watch?v=Ps8jOj7diA0 survey of many languages
 * <a href="http://itunes.apple.com/us/itunes-u/computer-science-162-001-spring/id496414017">Computer Science 162, 001|Spring 2012|UC Berkeley - iTunes</a> http://inst.eecs.berkeley.edu/~cs162/sp12/ http://www.youtube.com/watch?v=sjs5PtCsVA4
 * <a href="http://itunes.apple.com/us/itunes-u/computer-science-61a-001-spring/id496414697">Computer Science 61A, 001|Spring 2012|UC Berkeley - iTunes</a> http://inst.eecs.berkeley.edu/~cs61a/sp12/ http://www.youtube.com/watch?v=2ctRUep1QkA taught in Python
