only notify on message, not join/part/quit (low)

--- a/weechat.mdwn
+++ b/weechat.mdwn
@@ -5,6 +5,7 @@
     /set weechat.bar.input.size 0
     /filter list
     /filter add irc_smart * irc_smart_filter *
+    /set weechat.look.buffer_notify_default message
 
 ## Key bindings
 
@@ -24,6 +25,10 @@ http://www.weechat.org/files/doc/stable/weechat_quickstart.en.html#key_bindings
 
 ### Mode noise
 
+I believe the fix I was looking for was `/set weechat.look.buffer_notify_default message` as discussed at http://indiewebcamp.com/irc/2013-06-01
+
+See also http://www.weechat.org/files/doc/stable/weechat_user.en.html#notify_levels
+
 task #12499, filter mode changes after joins: http://savannah.nongnu.org/task/?12499
 
 "When you see a mode change it's not "MODE" command received but a numeric command (for example 324 for channel modes). So you may have to ignore many numeric commands to ignore all modes." -- http://forums.flashtux.org/viewtopic.php?p=106&sid=62c78f547fb166200ca839a0d08d96d4#p106
@@ -31,6 +36,10 @@ task #12499, filter mode changes after joins: http://savannah.nongnu.org/task/?1
 http://www.weechat.org/files/doc/weechat_faq.en.html#filter_irc_join_part_quit
 
 See also http://dev.weechat.org/post/2008/10/25/Smart-IRC-join-part-quit-message-filter
+
+http://dev.weechat.org/post/2008/03/22/Filters_tags
+
+http://tools.ietf.org/html/rfc2812
 
 ### Can't click long links
 
